Issue #3318845: Fix flex wrap for secondary tabs when the tab is horizontal to show the full list of tabs

--- a/scss/vartheme-claro.theme.style.scss
+++ b/scss/vartheme-claro.theme.style.scss
@@ -209,3 +209,9 @@ td > .ajax-new-content > .form-item > .form-element {
     width: inherit;
   }
 }
+
+@media screen and (max-width: 48rem) {
+  .is-horizontal .tabs--secondary {
+    flex-wrap: wrap;
+  }
+}
